<?xml version="1.0"?>
<package format = "3">
  <name>dsrc_driver</name>
  <version>3.2.0</version>
  <description>The dsrc package</description>
  <maintainer email="support@torcrobotics.com">Torc Robotics</maintainer>
  <license>BSD</license>
  <author email="adkisson@torcrobotics.com">Joe Adkisson</author>
  <author email="watters@torcrobotics.com">Thomas Watters</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cav_driver_utils</depend>
  <depend>cav_msgs</depend>
  <depend>cav_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>bondcpp</depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
