<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dsrc_driver</name>
  <version>1.0.0</version>

  <description>The dsrc_driver package</description>

  <maintainer email="carma@dot.gov">carma</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>carma_cmake_common</build_depend>
  <build_depend>ament_auto_cmake</build_depend>

  <depend>rclcpp</depend>
  <depend>carma_ros2_utils</depend>
  <depend>rclcpp_components</depend>
  <depend>std_srvs</depend>

  <depend>j2735_v2x_msgs</depend>
  <depend>carma_driver_msgs</depend>
  <depend>carma_msgs</depend>
  <depend>rapidjson</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
